--- a/app/src/main/res/drawable/round_background.xml
+++ b/app/src/main/res/drawable/round_background.xml
@@ -4,7 +4,7 @@
         <shape
             android:shape="rectangle"
             android:padding="5dp">
-            <solid android:color="#b8f3ff" />
+            <solid android:color="#2affffff" />
             <corners
                 android:bottomRightRadius="30dp"
                 android:bottomLeftRadius="30dp"
@@ -16,7 +16,7 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle"
             android:padding="5dp">
-            <solid android:color="#b8f3ff"/> <!-- this one is ths color of the Rounded Button -->
+            <solid android:color="#2fffffff"/> <!-- this one is ths color of the Rounded Button -->
             <corners
                 android:bottomRightRadius="20dp"
                 android:bottomLeftRadius="20dp"
