--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="dark_purple">#36213e</color>
+    <color name="independence">#554971</color>
+    <color name="slate_gray">#63768d</color>
+    <color name="dark_sky_blue">#8ac6d0</color>
+    <color name="diamond">#b8f3ff</color>
+    <color name="white">#FFFFFF</color>
+    <color name="none">#00ffffff</color>
 </resources>
