--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,22 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="15sp"
         android:fontFamily="casual"
         android:text="@string/username"
         android:textColor="@color/dark_purple"
-        android:textSize="20sp"
-        android:layout_margin="15sp"/>
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/sign_out_btn"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_margin="15sp"
         android:text="@string/sign_out" />
 
