--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -2,22 +2,22 @@
     <item android:state_pressed="true" >
         <shape android:shape="rectangle"  >
             <corners android:radius="5dip" />
-            <stroke android:width="1dip" android:color="#8ac6d0" />
-            <gradient android:angle="-90" android:startColor="#8ac6d0" android:endColor="#8ac6d0"  />
+            <stroke android:width="1dip" android:color="@color/dark_sky_blue" />
+            <gradient android:angle="-90" android:startColor="@color/dark_sky_blue" android:endColor="@color/dark_sky_blue"  />
         </shape>
     </item>
     <item android:state_focused="true">
         <shape android:shape="rectangle"  >
             <corners android:radius="5dip" />
-            <stroke android:width="1dip" android:color="#8ac6d0" />
-            <solid android:color="#8ac6d0"/>
+            <stroke android:width="1dip" android:color="@color/dark_sky_blue" />
+            <solid android:color="@color/diamond"/>
         </shape>
     </item>
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="5dip" />
-            <stroke android:width="1dip" android:color="#8ac6d0" />
-            <gradient android:angle="-90" android:startColor="#8ac6d0" android:endColor="#8ac6d0" />
+            <stroke android:width="1dip" android:color="@color/dark_sky_blue" />
+            <gradient android:angle="-90" android:startColor="@color/independence" android:endColor="@color/slate_gray" />
         </shape>
     </item>
 </selector>
