--- a/app/src/main/res/drawable/round_white_rectungle.xml
+++ b/app/src/main/res/drawable/round_white_rectungle.xml
@@ -4,7 +4,7 @@
         <shape
             android:shape="rectangle"
             android:padding="5dp">
-            <solid android:color="#e7e7e7" />
+            <solid android:color="@color/milkWhite" />
             <corners
                 android:bottomRightRadius="5dp"
                 android:bottomLeftRadius="5dp"
@@ -13,10 +13,10 @@
         </shape>
     </item>
     <item android:bottom="2px" android:right="2px">
-        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+        <shape
             android:shape="rectangle"
             android:padding="5dp">
-            <solid android:color="#fff"/> <!-- this one is ths color of the Rounded Button -->
+            <solid android:color="@color/white"/> <!-- this one is ths color of the Rounded Button -->
             <corners
                 android:bottomRightRadius="5dp"
                 android:bottomLeftRadius="5dp"
