updated code due to review comments

--- a/app/src/main/res/layout/row_view_locations.xml
+++ b/app/src/main/res/layout/row_view_locations.xml
@@ -32,7 +32,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:textSize="12sp"
-        android:text="@string/seeDetails"
+        android:text="@string/see_details"
         />
 
 </androidx.cardview.widget.CardView>
