--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,6 +6,13 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/profile_picture_image_view"
+        android:layout_gravity="center"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:contentDescription="@string/images"/>
+
     <TextView
         android:id="@+id/name_tv"
         android:layout_width="wrap_content"
@@ -14,6 +21,17 @@
         android:layout_margin="15sp"
         android:fontFamily="casual"
         android:text="@string/username"
+        android:textColor="@color/dark_purple"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/email_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="15sp"
+        android:fontFamily="casual"
+        android:text="@string/email"
         android:textColor="@color/dark_purple"
         android:textSize="20sp" />
 
@@ -27,5 +45,15 @@
         android:text="@string/phone"
         android:textColor="@color/dark_purple"
         android:textSize="20sp" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/edit_profile_btn"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:textSize="12sp"
+        android:text="@string/edit_profile"
+        />
 
 </LinearLayout>
