--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,8 @@
     <color name="white">#FFFFFF</color>
     <color name="none">#00ffffff</color>
     <color name="black">#00000000</color>
-    <color name="stoneBlack">#44000000</color>
+    <color name="stone_black">#44000000</color>
     <color name="grey">#2affffff</color>
-    <color name="milkWhite">#e7e7e7</color>
+    <color name="milk_white">#e7e7e7</color>
+    <color name="dark_grey">#99999999</color>
 </resources>
